[package]
name = "rocket-swagger-ui"
version = "0.1.1"
authors = ["kotborealis <kotborealis@awooo.ru>"]
edition = "2018"
exclude = [
    ".idea"
]
description = "Swagger-ui for rust applications with rocket integration"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swagger-ui = { version = "0.1.1", path = "../swagger-ui" }
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"