[package]
name = "swagger-ui"
version = "0.1.1"
authors = ["kotborealis <kotborealis@awooo.ru>"]
edition = "2018"
exclude = [
    ".idea"
]
description = "Swagger-ui for rust applications"
license = "MIT"
documentation = "https://docs.rs/swagger-ui/"
repository = "https://github.com/kotborealis/swagger-ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
reqwest = "0.7.3"
flate2 = "1.0.20"
tar = "0.4.33"

[dependencies]
rust-embed = { version = "5.9.0", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"