[package]
name = "swagger-ui"
version = "0.1.5"
authors = ["kotborealis <kotborealis@awooo.ru>"]
edition = "2018"
exclude = [
    ".idea"
]
description = "Swagger-ui for rust applications"
license = "MIT"
documentation = "https://docs.rs/swagger-ui/"
repository = "https://github.com/kotborealis/swagger-ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
rocket = ["rocket-swagger-ui"]

[dependencies]
rust-embed = { version = "5.9.0", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

rocket-swagger-ui = { version = "0.1", optional = true }