[package]
name = "swagger-ui"
version = "0.1.5"
authors = ["kotborealis <kotborealis@awooo.ru>"]
edition = "2021"
exclude = [
    ".idea"
]
description = "Swagger-ui for rust applications"
license = "MIT"
documentation = "https://docs.rs/swagger-ui/"
repository = "https://github.com/kotborealis/swagger-ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
rocket = ["rocket-swagger-ui"]
# actix-web = ["actix-web-swagger-ui"]

[dependencies]
rust-embed = { version = "5.9.0", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

rocket-swagger-ui = { version = "0.1", optional = true }
# actix-web-swagger-ui = { version = "0.1", optional = true }

[build-dependencies]
reqwest = { version = "0.11.20", features = ["json", "stream", "rustls"] }
futures = "0.3.28"
futures-executor = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
async-recursion = "1.0.5"